samples/_failures_safe/1761214392_1fe15b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1896c2c1.c: In function ‘main’:
./samples/SAFE/__tmp_1896c2c1.c:160:58: error: expected ‘)’ at end of input
  160 |                 int status = add_matrices(&a, &b, &result
      |                                          ~               ^
      |                                                          )
./samples/SAFE/__tmp_1896c2c1.c:160:17: error: expected declaration or statement at end of input
  160 |                 int status = add_matrices(&a, &b, &result
      |                 ^~~
./samples/SAFE/__tmp_1896c2c1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1896c2c1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1896c2c1.c:160:17: error: expected declaration or statement at end of input
